plugins {
    id 'org.springframework.boot' version '3.5.11'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'application'
    id 'java'
    id 'org.openrewrite.rewrite' version 'latest.release'
}

group = 'org.chxei'
version = '0.0.1'

java {
    compileJava {
        options.fork = true
        options.incremental = true
    }
    sourceCompatibility = '25'
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
        //vendor = JvmVendorSpec.GRAAL_VM
    }
}
configurations {
    configureEach {
        resolutionStrategy {
            cacheDynamicVersionsFor 24, 'hours'
            cacheChangingModulesFor 24, 'hours'
        }
    }
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    gradlePluginPortal()
}

rewrite {
//    activeRecipe("org.openrewrite.staticanalysis.CommonStaticAnalysis")
//    activeRecipe("org.openrewrite.staticanalysis.CodeCleanup")
    activeRecipe("org.openrewrite.java.migrate.UpgradeToJava21")
    setExportDatatables(true)
}


dependencies {
    rewrite 'org.openrewrite.recipe:rewrite-static-analysis:latest.release'
    rewrite 'org.openrewrite.recipe:rewrite-migrate-java:latest.release'
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'

    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
    implementation 'org.springdoc:springdoc-openapi-starter-common:2.8.13'
    implementation 'org.apache.httpcomponents:httpcore:4.4.16'
    implementation 'org.apache.httpcomponents:httpclient:4.5.14' exclude group: 'commons-logging', module: 'commons-logging'
    implementation 'io.github.cdimascio:dotenv-kotlin:6.5.1'
    implementation 'com.google.guava:guava:33.5.0-jre'
    implementation 'org.apache.commons:commons-lang3:3.19.0'
    implementation 'com.tinify:tinify:latest.release'
    implementation 'org.xerial:sqlite-jdbc:3.50.3.0'
    implementation 'org.hibernate.orm:hibernate-community-dialects:7.0.10.Final' //not latest version
    implementation 'org.springframework.security:spring-security-test'
    compileOnly 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools' //not compatible with native
    annotationProcessor 'org.projectlombok:lombok:1.18.44'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.44'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

tasks.register('publish') {
    publish.dependsOn(bootJar)
    publish.doFirst {
        project.mkdir ".github/build"
    }
    publish.doLast {
        file("./build/libs/shmessenger-" + version + ".jar").renameTo(file("./.github/build/shmessenger.jar"))
        delete("./build")
    }
}
